gccida/g1/dw2_asm_output_delta
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_delta/src/dwarf2asm.c:568:35: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), lab2); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_delta/src/dwarf2asm.c:569:35: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), lab1); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_delta/src/dwarf2asm.c:570:31: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v6, v5); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_delta/src/obj/dwarf2asm.o] Error 1
